<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

          <ImageView
              android:id="@+id/imageView"
              android:layout_width="513dp"
              android:layout_height="320dp"
              android:layout_marginStart="-4dp"
              android:scaleType="fitXY"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:src="@drawable/bg" />
          <TextView
              android:id="@+id/textView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="BIENVENUE"
              android:fontFamily="cursive"
              android:textColor="#ffffff"
              android:textSize="50sp"
              android:textStyle="bold"
              app:layout_constraintBottom_toBottomOf="@+id/imageView"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.498"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintVertical_bias="0.35000002" />

          <TextView
              android:id="@+id/txt_login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="monospace"
              android:text="Connectez Vous"
              android:textAlignment="center"
              android:textColor="#051074"
              android:textSize="35sp"
              android:textStyle="bold"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/imageView" />

     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

               <RelativeLayout
                   android:id="@+id/image_textview"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:ignore="MissingConstraints"/>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="324dp"
                   android:layout_below="@+id/image_textview"
                   tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_email_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/adresse_email"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        app:hintAnimationEnabled="true">

                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/bleue"
                             android:drawableStart="@drawable/ic_baseline_email_24"
                             android:drawablePadding="@dimen/space"
                             android:inputType="textEmailAddress"
                             app:backgroundTint="@color/bleue" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_email_input"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:hintAnimationEnabled="true"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        app:passwordToggleEnabled="true">

                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/bleue"
                             android:drawableStart="@drawable/ic_baseline_lock_24"
                             android:drawablePadding="@dimen/space"
                             android:inputType="textPassword"
                             app:backgroundTint="@color/bleue" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_input_password"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/round_button_connexion"
                        android:text="@string/connexion"
                        app:backgroundTint="@color/bleue_foncer" />

                    <TextView
                        android:id="@+id/password_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/mot_de_passe_oubli"
                        android:textAlignment="center"
                        android:layout_below="@+id/login"
                        android:textColor="@color/rouge"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/no_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/password_forgot"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:text="@string/no_account"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        tools:ignore="NotSibling,UnknownId" />

               </RelativeLayout>



     </androidx.constraintlayout.widget.ConstraintLayout>
          </LinearLayout>
     </ScrollView>
</LinearLayout>
