<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="466dp"
            android:layout_height="267dp"
            android:layout_marginStart="-4dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avec Nous, la satisfaction est primordiale"
            android:fontFamily="cursive"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Inscrivez Vous"
            android:textAlignment="center"
            android:textColor="#051074"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/image_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_textview"
                    tools:ignore="MissingConstraints">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/text_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="true"
                        android:hint="@string/full_name"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopStart="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_person_24"
                            android:drawablePadding="@dimen/space"
                            android:backgroundTint="@color/connexion"
                            app:backgroundTint="@color/connexion"
                            android:inputType="text"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/text_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintAnimationEnabled="true"
                        android:hint="@string/adresse_email"
                        android:layout_below="@+id/text_fullname"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopStart="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:drawablePadding="@dimen/space"
                            android:backgroundTint="@color/connexion"
                            app:backgroundTint="@color/connexion"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_email_input"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:hintAnimationEnabled="true"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="20dp"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopStart="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/connexion"
                            app:backgroundTint="@color/connexion"
                            android:drawablePadding="@dimen/space"
                            android:drawableStart="@drawable/ic_baseline_lock_24" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_confir_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_input_password"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:hintAnimationEnabled="true"
                        app:passwordToggleEnabled="true"
                        android:hint="@string/confirm_password"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopStart="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirme_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/connexion"
                            app:backgroundTint="@color/connexion"
                            android:drawablePadding="@dimen/space"
                            android:drawableStart="@drawable/ic_baseline_lock_24" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/inscription_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_confir_password"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/round_button_connexion"
                        android:text="@string/inscription"
                        app:backgroundTint="@color/bleue_foncer"
                        tools:ignore="InvalidId" />

                    <TextView
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inscription_button"
                        android:layout_marginTop="25dp"
                        android:text="@string/have_account"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>