<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ForgetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="56dp"
            android:layout_height="51dp"
            android:background="@null"

            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="MissingConstraints" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="513dp"
            android:layout_height="320dp"
            android:layout_marginStart="-4dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oups!!!"
            android:fontFamily="cursive"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Modifier mot de passe"
            android:textAlignment="center"
            android:textColor="#051074"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/image_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relative_returnback"
                    tools:ignore="MissingConstraints"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_textview"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/text_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:hintAnimationEnabled="true"
                        android:hint="@string/adresse_email"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopStart="20dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_email_24"
                            android:drawablePadding="@dimen/space"
                            android:backgroundTint="@color/connexion"
                            app:backgroundTint="@color/connexion"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/authenticate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text_email_input"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/round_button_connexion"
                        android:text="@string/s_authentifier"
                        app:backgroundTint="@color/bleue_foncer" />

                    <TextView
                        android:id="@+id/login_now"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/authenticate"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/se_connecter"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>